Fixing alignment of Add button

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -6,11 +6,6 @@ header {
     padding-block: 2rem;
 }
 
-.container {
-    max-width: 1020px;
-    margin: 0 auto;
-}
-
 footer {
     text-align: center;
     color: var(--clr-text-muted);
