--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -18,5 +18,5 @@
 .add-call {
     position: absolute;
     bottom: 1.5rem;
-    width: calc(100% - 2rem);
+    width: calc(var(--container-width) - 2rem);
 }
